[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
syntect = { version = "5.1.0", default-features = false, features = ["default-fancy"]}
[build-dependencies]
prost-build = "0.12.3"
